<resources>
    <string name="app_name">Mobi Market</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editText_password">Пароль</string>
    <string name="editText_name">Имя пользователя</string>
    <string name="text_registration">Зарегистрироваться</string>
    <string name="text_registration_screen">Регистрация</string>
    <string name="text_rule">Минимальная длина — 8 символов.\n Для надежности пароль должен\n содержать буквы и цифры.</string>
    <string name="text_profile">Профиль</string>
    <string name="button_registration_full">Закончить регистрацию</string>
    <string name="button_exit">Выйти</string>
    <string name="button_no">Отмена</string>
    <string name="button_delete">Удалить</string>
    <string name="text_photo">Выбрать фотографию</string>
    <string name="editText_surname">Фамилия</string>
    <string name="editText_login">Логин</string>
    <string name="editText_date">Дата рождения</string>
    <string name="add_phone">Добавить номер</string>
    <string name="text_number">Введите номер телефона</string>
    <string name="text_sms">Мы отправим вам СМС с кодом\n подтверждения</string>
    <string name="editText_phone">+000 000 000 000</string>
    <string name="text_cancel">Вы действительно хотите\n отменить добавление товара?</string>
    <string name="text_exactly_exit">Вы действительно хотите выйти\n с приложения?</string>
    <string name="text_delete">Изменить</string>
    <string name="text_edit">Изменить</string>
    <string name="text_delete_prod">Вы действительно хотите\n удалить данный товар?</string>
    <string name="text_like">Нравится: %d</string>
    <string name="text_liked_product">Понравившиеся</string>
</resources>